# kluster

./: .env  README.md  pyproject.toml  requirements.txt  wsgi.py
instance/: kluster.db
kluster/: app.py  config.py  logging_conf.py  metrics.py  models.py  schemas.py
kluster/routes/: __init__.py  auth.py  collection.py  health.py  messages.py  notifications.py  profile.py  search.py
kluster/services/: auth_service.py  collection_service.py  messaging_service.py  price_service.py  search_service.py
kluster/static/css/: main.css
kluster/templates/: base.html  collection.html  login.html  messages_inbox.html  messages_thread.html  profile.html  search.html
migrations/versions/: 02cad1c458b6_.py  b49c3a60e1e2_initial.py
tests/: conftest.py  test_auth.py  test_collection.py  test_health.py  test_search.py
